Bug where header scrolls offscreen on long pages

--- a/core/templates/core/style.css
+++ b/core/templates/core/style.css
@@ -274,7 +274,7 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 100%;
   overflow: scroll;
 
   & > header {
